--- a/mnm3e.css
+++ b/mnm3e.css
@@ -695,10 +695,39 @@
 }
 
 #chat-log .chat-message {
-  background: #eeebeb;
+  font-family: "Raider Crusader", sans-serif;
+  text-shadow: 2px 2px #9b9696;
+  color: honeydew;
+  background: url(/systems/mnm3e/assets/images/chat.png);
+  background-size: cover;
 }
 #chat-log .chat-message .effect-button {
   background: #e4e4e491;
+}
+.chat-message .message-header .message-sender {
+  flex: 3;
+  margin: 0;
+  white-space: nowrap;
+  color: honeydew;
+}
+.chat-message .message-header .message-metadata {
+  flex: 2;
+  text-align: right;
+  font-size: var(--font-size-12);
+  color: honeydew;
+}
+.dice-roll .dice-formula, .dice-roll .dice-total {
+  font-family: "Raider Crusader", sans-serif;
+  flex: 0 0 100%;
+  position: relative;
+  margin: 0;
+  line-height: 24px;
+  text-align: center;
+  background: rgba(197, 197, 197, 0.712);
+  border: 1px solid var(--color-border-light-2);
+  border-radius: 3px;
+  box-shadow: 0 0 2px #fff inset;
+  word-break: break-all;
 }
 
 .four-fail, .three-fail, .two-fail, .one-fail, .one-success, .two-success, .three-success, .four-success {
