--- a/templates/chat/basic-roll-card.html
+++ b/templates/chat/basic-roll-card.html
@@ -1,7 +1,7 @@
 {{log "Start basic-roll-card"}}
 <div class="mnm3e chat-card basic-roll-card" data-actor-id="{{actor._id}}">
     <header class="card-header flexrow">
-        <img src="{{actor.img}}" title="{{actor.name}}" width="36" height="36" />
+        <!-- <img src="{{actor.img}}" title="{{actor.name}}" width="36" height="36" /> -->
         <h3 class="check-type">{{ templateContent.cardLabel }}</h3>
     </header>
     <div class="card-content flexcol">
