Added Vehicle and Base items to Catalog, equip/vehicles/base all populate under base

--- a/templates/actors/parts/character-catalog.html
+++ b/templates/actors/parts/character-catalog.html
@@ -30,3 +30,19 @@
       type="equipment"
       canFavorite=true
 }}
+{{>
+      "systems/mnm3e/templates/items/parts/list-sheet.html"
+      items=vehicle
+      sections=vehicleSections
+      header=(localize "MNM3E.Vehicles")
+      type="vehicle"
+      canFavorite=true
+}}
+{{>
+      "systems/mnm3e/templates/items/parts/list-sheet.html"
+      items=base
+      sections=baseSections
+      header=(localize "MNM3E.Base")
+      type="base"
+      canFavorite=true
+}}
