--- a/templates/actors/parts/character-origins.html
+++ b/templates/actors/parts/character-origins.html
@@ -2,24 +2,46 @@
     <div>
         <h3 class="details-title">{{ localize "MNM3E.CDetails" }}</h3>
     </div>
-    <div class="character-details details-row1 flexrow">
-      <div>
-        <input name="data.gender" type="text" value="{{data.data.gender}}" placeholder="{{localize 'MNM3E.Gender'}}" />
+    <div class="character-details-box flexcol">
+      <div class="character-details details-row1 flexrow">
+        <div>
+            <h3 class="details-label">{{ localize "MNM3E.Gender" }}</h3>
+        </div>
+        <div>
+            <h3 class="details-label">{{ localize "MNM3E.Age" }}</h3>
+        </div>
+        <div>
+            <h3 class="details-label">{{ localize "MNM3E.Height" }}</h3>
+        </div>
+        <div>
+            <h3 class="details-label">{{ localize "MNM3E.Weight" }}</h3>
+        </div>
+        <div>
+            <h3 class="details-label">{{ localize "MNM3E.Eyes" }}</h3>
+        </div>
+        <div>
+            <h3 class="details-label">{{ localize "MNM3E.Hair" }}</h3>
+        </div>
       </div>
-      <div>
-        <input name="data.age" type="number" value="{{data.data.age}}" placeholder="{{localize 'MNM3E.Age'}}" />
-      </div>
-      <div>
-        <input name="data.height" type="text" value="{{data.data.height}}" placeholder="{{localize 'MNM3E.Height'}}" />
-      </div>
-      <div>
-        <input name="data.weight" type="text" value="{{data.data.weight}}" placeholder="{{localize 'MNM3E.Weight'}}" />
-      </div>
-      <div>
-        <input name="data.eyes" type="text" value="{{data.data.eyes}}" placeholder="{{localize 'MNM3E.Eyes'}}" />
-      </div>
-      <div>
-        <input name="data.hair" type="text" value="{{data.data.hair}}" placeholder="{{localize 'MNM3E.Hair'}}" />
+      <div class="character-details details-row2 flexrow">
+        <div>
+          <input name="data.gender" type="text" value="{{data.data.gender}}" placeholder="{{localize 'MNM3E.Gender'}}" />
+        </div>
+        <div>
+          <input name="data.age" type="number" value="{{data.data.age}}" placeholder="{{localize 'MNM3E.Age'}}" />
+        </div>
+        <div>
+          <input name="data.height" type="text" value="{{data.data.height}}" placeholder="{{localize 'MNM3E.Height'}}" />
+        </div>
+        <div>
+          <input name="data.weight" type="text" value="{{data.data.weight}}" placeholder="{{localize 'MNM3E.Weight'}}" />
+        </div>
+        <div>
+          <input name="data.eyes" type="text" value="{{data.data.eyes}}" placeholder="{{localize 'MNM3E.Eyes'}}" />
+        </div>
+        <div>
+          <input name="data.hair" type="text" value="{{data.data.hair}}" placeholder="{{localize 'MNM3E.Hair'}}" />
+        </div>
       </div>
     </div>
 </div>
