--- a/templates/items/advantage-sheet.html
+++ b/templates/items/advantage-sheet.html
@@ -1,9 +1,11 @@
 <form class="{{cssClass}} item-sheet-advantage flexcol" autocomplete="off">
     <header class="sheet-header flexrow">{{> "systems/mnm3e/templates/items/parts/header-sheet.html" showSummary=true }}
     </header>
-    <nav class="sheet-navigation tabs" data-group="primary"><a class="item active" data-tab="description">{{ localize
-            "MNM3E.Description" }}</a><a class="item" data-tab="details">{{ localize "MNM3E.Details" }}</a><a
-            class="item" data-tab="effects">{{ localize "MNM3E.Effects" }}</a></nav>
+    <nav class="sheet-navigation tabs" data-group="primary">
+        <a class="item active" data-tab="description">{{ localize "MNM3E.Description" }}</a>
+        <a class="item" data-tab="details">{{ localize "MNM3E.Details" }}</a>
+        <a class="item" data-tab="effects">{{ localize "MNM3E.Effects" }}</a>
+    </nav>
     <section class="sheet-body">
         <div class="tab description flexrow active" data-group="primary" data-tab="description">
             <div class="item-properties flexcol">{{> "systems/mnm3e/templates/items/parts/cost-sheet.html" }}</div>
